--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+<h1>Doge the Bell</h1>
+<p>
+  Doge the Bell: The Shibes quest for tacos.  ...and the Moon. 
+</p>
