Finish layout and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,8 @@
 <% provide(:title, 'Home') %>
-<h1>Doge the Bell</h1>
-<p>
-  Doge the Bell: The Shibes quest for tacos.  ...and the Moon. 
-</p>
+<div class="center hero-unit">
+<h1 style="margin-left:auto; margin-right:auto; width:70%">Moon Más</h1>
+<h2>
+  The Shibes' quest for tacos.  ...and the Moon. 
+</h2>
+	<%= link_to image_tag("shibetoshisauce.png", alt: "Rails"), signup_path %>
+</div>
