--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,23 @@
 <% provide(:title, 'Home') %>
 <div class="center hero-unit">
 <h1 style="margin-left:auto; margin-right:auto; width:70%">Moon Más</h1>
+<%= image_tag("DogePlusChalupaEqualsMoon.png", alt: "Doge + Chalupa = Moon") %>
 <h2>
   The Shibes' quest for tacos.  ...and the Moon. 
 </h2>
-	<%= link_to image_tag("shibetoshisauce.png", alt: "Rails"), signup_path %>
+<ol>
+	<li> Make Taco Bell memes, infographics, videos, songs and other amaze.  Preferably doge.</li>
+	<br>
+	<li> Attach a Dogecoin address to such memes and other amaze.  Say you will pledge this Dogecoin 
+		to buying Taco Bell gift cards if T-Bell starts many accept. </li>
+	<br> 
+	<li> Other Shibes who like your memes and other T-Bell amaze can tip your address dedicated to such tacos. </li>
+	<br>
+	<li> If Taco Bell appreciates Shibes' goodwill and wants to sell many taco, they start so accept. </li>
+	<br> 
+	<li> ??????????????????????????????????????????????????????????????????????????????????????????? </li>
+	<br> 
+	<li> So publicity.  Much coin.  Very Moon.  Wow. </li> 
+</ol> 
+	<%= link_to image_tag("shibetoshisauce.png", alt: "Sign Up"), signup_path %>
 </div>
