--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,23 +1,38 @@
 <% provide(:title, 'Home') %>
-<div class="center hero-unit">
+
+<div class="center">
 <h1 style="margin-left:auto; margin-right:auto; width:70%">Moon Más</h1>
 <%= image_tag("DogePlusChalupaEqualsMoon.png", alt: "Doge + Chalupa = Moon") %>
 <h2>
   The Shibes' quest for tacos.  ...and the Moon. 
 </h2>
-<ol>
-	<li> Make Taco Bell memes, infographics, videos, songs and other amaze.  Preferably doge.</li>
-	<br>
-	<li> Attach a Dogecoin address to such memes and other amaze.  Say you will pledge this Dogecoin 
-		to buying Taco Bell gift cards if T-Bell starts many accept. </li>
-	<br> 
-	<li> Other Shibes who like your memes and other T-Bell amaze can tip your address dedicated to such tacos. </li>
-	<br>
-	<li> If Taco Bell appreciates Shibes' goodwill and wants to sell many taco, they start so accept. </li>
-	<br> 
-	<li> ??????????????????????????????????????????????????????????????????????????????????????????? </li>
-	<br> 
-	<li> So publicity.  Much coin.  Very Moon.  Wow. </li> 
-</ol> 
+</div>
+<div style="margin-left:auto; margin-right:auto; width:60%" class="-center">
+<p>
+	<sp>Two things very important to the Shibe community are goodwill and Moon. 
+</p>
+<p> 
+	This site is dedicated to aiming unsolicited goodwill at Taco Bell with the hopes that T-Bell will join our community and help us go to the Moon in 2014. 
+</p>
+<p>
+	We hope to do this in true Shibe fashion: by having fun and rewarding people who make us smile.
+</p>
+<p> 
+	What this site asks is that people create content about or involving Taco Bell that will entertain and delight Shibes worldwide.  It can be any form, and it can be funny, informative or anything that Shibes can appreciate.
+</p>
+<p> 
+	Then, after making such content, the creator will insert a "Doge the Bell" tag or reference and the creator's Dogecoin address that he/shibe has dedicated to the "Doge the Bell" campaign.  
+</p>
+<p>
+	This tag or reference will tell people that if they tip the creator of the content with that address, then the creator will pledge not to use the Dogecoin address until Taco Bell decides to accept Dogecoin.  He/shibe will also pledge to use that Dogecoin address solely to purchase Taco Bell gift cards.  
+</p>
+<p>
+	There are no gaurantees that T-Bell will respond.  There's no gaurantee that they will even like Shibes making a bunch of Taco Bell related content. Also, even if T-Bell accepts Dogecoin, there's no way to force the pledgers to actually purchase gift cards.  Everything just relies on the goodwill of the Dogecoin community and Taco Bell joining that community.
+</p>
+<p>
+	But then again, even if the experiment fails, both Dogecoin and Taco Bell get some publicity and hopefully we get some good laughs.  Also, It will hopefully bring in new Shibes and teach them about our community, Doge tipping and most of all fun. 
+</p>
+</div>
+<div class="center">
 	<%= link_to image_tag("shibetoshisauce.png", alt: "Sign Up"), signup_path %>
 </div>
