--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,12 @@
 
 div {font-family:"Comic Sans MS", cursive, sans-serif}
 
+p
+{
+text-indent:25px;
+margin-bottom:15px;
+}
+
 .hero-unit{
     background-color: rgba(0, 0, 0, 0); // use rgba and set Opacity to 0 for transparent.
  }
@@ -179,4 +185,19 @@ input {
 .field_with_errors {
   @extend .control-group;
   @extend .error;
+}
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid $grayLighter;
+    &:last-child {
+      border-bottom: 1px solid $grayLighter;
+    }
+  }
 }
